# Crypto

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.obsidian/: app.json  core-plugins.json  templates.json
adapters/: __init__.py
chronos_integration/: README.md  __init__.py  example.py  forecaster.py  install.sh  requirements.txt  uninstall.sh
core/: trader_settings.py
docs/: architecture.md  d3-launch-guide.md  runbook.md  telegram-setup.md
forecast_bench/: .gitignore  aggregate.py  fetch_data.py  run_model.py
gold-bot/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  risk-profile.md
gold-bot/backtest/: __init__.py  costs.py  engine.py  kill_tests.py  metrics.py  strategy.py  walkforward.py
gold-bot/backtest/tests/: test_engine.py  test_kill_tests.py  test_walkforward.py
gold-bot/config/: paper.yaml  risk.yaml
gold-bot/deploy/: .env.example  Dockerfile  README.md  docker-compose.yaml
gold-bot/deploy/systemd/: gold-bot-daily-report.service  gold-bot-daily-report.timer  gold-bot-paper.service
gold-bot/exchanges/: README.md  __init__.py  base.py  bingx.py  bybit.py  ccxt_base.py  errors.py  logging_utils.py  models.py  normalize.py
gold-bot/exchanges/tests/: test_ccxt_account.py  test_ccxt_market.py  test_ccxt_trading.py  test_integration_bybit_testnet.py  test_masking.py  test_models.py  test_normalize.py
gold-bot/indicators/: __init__.py  core.py
gold-bot/indicators/tests/: test_indicators.py
gold-bot/journal/: 2026-05-20-step0-recon.md  2026-05-22-connectivity.md  2026-05-22-step0-recon-result.md  2026-05-26-step6-paper-deploy-ready.md  2026-05-27-audit-shchukin-methodology.md  2026-05-27-step2-24grid-fail.md  2026-05-27-step2-oos-fail-bybit-confirms.md  2026-05-27-step2-oos-fail-donchian.md  2026-05-27-step2-oos-fail-mean-reversion.md  bingx-quirks.md
gold-bot/marketdata/: __init__.py  candles.py  funding.py
gold-bot/marketdata/tests/: test_candles.py  test_funding.py
gold-bot/paper/: __init__.py  competition.py  config.py  engine.py  feed.py  journal.py  promotion.py  reporter.py  runner.py
gold-bot/paper/tests/: __init__.py  test_competition.py  test_config.py  test_daily_report.py  test_engine.py  test_feed.py  test_journal.py  test_promotion.py  test_reporter.py
gold-bot/plans/: 00-master-plan-2026-05-20.md  01-exchanges-adapter-ccxt-2026-05-20.md  02-data-layer-2026-05-20.md  03-indicators-risk-2026-05-20.md  04-backtest-2026-05-22.md  05-strategy-mean-reversion-2026-05-22.md  06-paper-runner-2026-05-22.md  07-deploy-2026-05-22.md  08-champion-challenger-2026-05-26.md  09-live-runner-2026-05-26.md  10-strategy-donchian-breakout-2026-05-27.md  11-strategy-funding-arb-2026-05-27.md
gold-bot/risk/: __init__.py  config.py  engine.py
gold-bot/risk/tests/: test_engine.py
gold-bot/scripts/: __init__.py  daily_report.py  download_klines.py  recon_funding.py  recon_universe.py  run_backtest.py  run_paper.py  smoke_exchange.py
gold-bot/strategies/: __init__.py
gold-bot/strategies/donchian_breakout/: __init__.py  config.py  config.yaml  strategy.py
gold-bot/strategies/donchian_breakout/tests/: __init__.py  test_strategy.py
gold-bot/strategies/mean_reversion_vwap/: __init__.py  config.py  config.yaml  strategy.py
gold-bot/strategies/mean_reversion_vwap/tests/: test_strategy.py
kronos_integration/: .gitignore  README.md  __init__.py  example.py  forecaster.py  install.sh  requirements.txt  uninstall.sh
ops/: README.md  crypto-shell.sh  extra-edge-probes.txt  faber_demo_README.md  macro-edge-probe.txt  onchain-edge-probe.txt  wf-aapl-trend-1d.json  wf-ada-ussession.json  wf-avax-ussession.json  wf-btc-box.json  wf-btc-ussession.json  wf-doge-ussession.json  wf-eth-box.json  wf-eth-ussession.json  wf-gspc-1d.json  wf-gspc-trend-1d.json  wf-mstr-trend-1d.json  wf-ndx-1d.json  wf-ndx-trend-1d.json  wf-nvda-1d.json  wf-nvda-trend-1d.json  wf-sol-ussession.json  wf-trend-ada.json  wf-trend-avax.json  wf-trend-btc.json  wf-trend-doge.json  wf-trend-eth.json  wf-trend-sol.json  wf-trend-xrp.json  wf-tsla-1d.json  wf-tsla-trend-1d.json  wf-us-ada.json  wf-us-avax.json  wf-us-btc.json  wf-us-doge.json  wf-us-xrp.json  wf-xrp-swing.json  wf-xrp-ussession.json
plans/: 00-стратегия-проекта-2026-05-09.md  01-bingx-адаптер.md  02-btc-breakout-backtest.md  02-фаза-0B.md  03-obsidian-vault.md  04-фаза-0C.md  05-фаза-0D.md  06-фаза-0D-part2.md  07-фаза-0E.md  08-стратегия-btc-breakout.md  09-risk-engine.md  10-backtest-engine.md  11-стратегия-код.md  12-стратегия-1h-oos.md  13-стратегия-выбор-3.md  14-стратегия-us-session.md  15-trend-following-4h.md  16-деплой-24-7.md  17-llm-composite-subagents.md  18-postmortem-learning-layer.md  19-asset-strategies.md  20-стратегия-из-курса.md  21-liquidation-reversal-strategy.md  22-мульти-скрин-и-источники.md  22-скальп-профиль-2026-05-17.md  23-btc-свинг-vs-скальп-2026-05-17.md  23-dolf-формализация.md  24-eth-xrp-свинг-vs-скальп-2026-05-17.md  24-акции-фундаментал-сезонность.md  25-range-reversion.md  25-xrp-свинг-wf-2026-05-17.md  (+45 more)
(+816 files in other folders)
