[project]
name = "gold-bot"
version = "0.0.1"
description = "Intraday bot for tokenized gold/silver, equity perps and crypto majors (BingX + Bybit)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.9,<0.10",
    "mypy>=1.14,<2",
]
# Биржевой слой подключается отдельно, чтобы держать ядро лёгким.
exchange = [
    "ccxt>=4.4,<5",
    "structlog>=24.1",
]

# ─── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # длину строк держит форматтер
    "RUF001", # неоднозначные символы (кириллица — ложные срабатывания)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["B011"]

# ─── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# ─── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["exchanges/tests"]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]
markers = [
    "integration: ходит на реальный testnet биржи, запуск вручную через `pytest -m integration`",
]
